--- a/map_reduce_hdfs_App1/pom.xml
+++ b/map_reduce_hdfs_App1/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>map_reduce_hdfs</artifactId>
+    <artifactId>map_reduce_hdfs_App1</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
